# TurboInfer

./: .gitignore  CMakeLists.txt  CURRENT_FIXES.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_STATUS.md  README.md  build.ps1  build_windows.ps1  test_advanced_math.cpp  test_compile.cpp  test_library.cpp  validate_quantization_fix.cpp
.github/: copilot-instructions.md
benchmarks/: CMakeLists.txt  benchmark_inference.cpp  benchmark_simple.cpp
cmake/: TurboInferConfig.cmake.in
docs/: BASIC_IMPLEMENTATION_IMPROVEMENTS.md  README.md  development.md
docs/implementation/: INCOMPLETE_FEATURES.md  logprob_defaults_fix.md  transformer_fix.md
examples/: CMakeLists.txt  README.md  basic_inference.cpp  pytorch_loader_demo.cpp  readme_example.cpp
include/turboinfer/: turboinfer.hpp
include/turboinfer/core/: tensor.hpp  tensor_engine.hpp
include/turboinfer/model/: inference_engine.hpp  model_loader.hpp
include/turboinfer/optimize/: quantization.hpp
include/turboinfer/util/: logging.hpp  profiler.hpp
scripts/: build.bat  build_windows.bat  compile_example.ps1  dev.ps1  run_all_tests.bat  run_all_tests.ps1  run_fixed_tests.bat  run_fixed_tests.ps1  run_tests.bat  run_tests_simple.ps1  test_all_final.ps1  test_category.ps1  test_manual.ps1
src/: turboinfer.cpp
src/core/: tensor.cpp  tensor_engine.cpp
src/model/: inference_engine.cpp  model_loader.cpp
src/optimize/: quantization.cpp
src/util/: logging.cpp  profiler.cpp
tests/: CMakeLists.txt  README.md  test_beam_search.cpp  test_beam_search_simple.cpp  test_data_types.cpp  test_data_types_corrupted.cpp  test_data_types_fixed.cpp  test_enhanced_features.cpp  test_enhanced_tokenization.cpp  test_enhanced_transformer.cpp  test_error_handling.cpp  test_fast_attention.cpp  test_incomplete_features_complete.cpp  test_inference_engine.cpp  test_kv_cache_incremental.cpp  test_library_init.cpp  test_logging.cpp  test_logprob_defaults.cpp  test_main.cpp  test_math_ops.cpp  test_memory.cpp  test_model_loader.cpp  test_new_tensor_ops.cpp  test_performance.cpp  test_performance_stats.cpp  test_phase3_features.cpp  test_phase4_complete.cpp  test_profiler_fixed.cpp  test_pytorch_loader.cpp  test_pytorch_quick.cpp  test_quantization.cpp  test_quantization_complete.cpp  test_quantization_parameters.cpp  test_quantization_persistence.cpp  test_quantization_validation.cpp  test_simd_performance.cpp  test_tensor.cpp  test_tensor_corrupted.cpp  test_tensor_engine.cpp  test_tensor_fixed.cpp  (+5 more)
tools/: test_library.py
